@@ -17,7 +17,6 @@
 package com.jayway.restassured.internal
 
 import groovyx.net.http.HTTPBuilder
-import com.jayway.restassured.specification.KeystoreSpec
 
 class NoKeystoreSpecImpl implements KeystoreSpec {
 
